osprey_worker/src/osprey/engine/ast_validator/tests/test_validation_context/test_validation_transforms_osprey_py_ast_error_2.txt
error: unexpected node type `FunctionDef`
--> main.sml:2:0
     |
   2 | def foo():
     | ^ the Osprey rule language is a simplified subset of python
       | not all Python is valid osprey rule syntax
